# Rentify-backend

./: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
migrations/2025-03-09-194014_create_users/: up.sql
migrations/2025-03-13-112411_create_products/: up.sql
migrations/2025-03-20-191315_create_cart_table/: down.sql  up.sql
src/: main.rs  schema.rs  utils.rs
src/db/: pool.rs
src/middleware/: auth.rs  mod.rs
src/models/: cart.rs  mod.rs  product.rs  user.rs
src/routes/: cart.rs  mod.rs  product_routes.rs  user_routes.rs
