[package]
name = "rentifybackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
bcrypt = "0.12"
actix-cors = "0.7.1"
tokio = {version = "1", features = ["full"]}
chrono = { version = "0.4.40", features = ["clock"] }
jsonwebtoken = "9.3.1"
futures = "0.3"

